force-app/main/default/objects/Case/fields/SLAViolation__c.field-meta.xml
<CustomField>
    <fullName>SLAViolation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Violation</label>
    <type>Checkbox</type>
</CustomField>