force-app/main/default/objects/Case/validationRules/SA_deadline_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>SA_deadline_in_past</fullName>
    <active>true</active>
    <errorConditionFormula>AND( SLA_Deadline__c  &lt;=  CreatedDate )</errorConditionFormula>
    <errorDisplayField>SLA_Deadline__c</errorDisplayField>
    <errorMessage>SLA deadline can not be in the past or equal to Date/Time Opened</errorMessage>
</ValidationRule>